# ark-additional-curves

./: CHANGELOG.md  Cargo.toml  README.md
curves/: CHANGELOG.md  Cargo.toml  README.md
curves/bn124/: Cargo.toml
curves/bn124/benches/: bn124.rs
curves/bn124/scripts/: base_field.sage  scalar_field.sage
curves/bn124/src/: lib.rs
curves/bn124/src/constraints/: fields.rs  mod.rs
curves/bn124/src/curves/: g1.rs  g2.rs  mod.rs  tests.rs
curves/bn124/src/fields/: fq.rs  fq12.rs  fq6.rs  fr.rs  tests.rs
curves/bn183/: Cargo.toml
curves/bn183/benches/: bn183.rs
curves/bn183/src/: lib.rs
curves/bn183/src/constraints/: mod.rs
curves/bn183/src/curves/: g1.rs  g2.rs  mod.rs  tests.rs
curves/bn183/src/fields/: fq.rs  fq12.rs  fq6.rs  fr.rs  tests.rs
curves/ed181/: Cargo.toml
curves/ed181/benches/: ed181.rs
curves/ed181/src/: lib.rs
curves/ed181/src/curves/: g1.rs  g2.rs  mod.rs  tests.rs
curves/ed181/src/fields/: fq.rs  fq3.rs  fq6.rs  fr.rs
curves/ed58/: Cargo.toml
curves/ed58/benches/: ed58.rs
curves/ed58/src/: lib.rs
curves/ed58/src/curves/: g1.rs  g2.rs  mod.rs  tests.rs
curves/ed58/src/fields/: fq.rs  fq3.rs  fq6.rs  fr.rs  tests.rs
curves/ed61/: Cargo.toml
curves/ed61/benches/: ed61.rs
curves/ed61/src/: lib.rs
curves/ed61/src/curves/: g1.rs  g2.rs  mod.rs  tests.rs
curves/ed61/src/fields/: fq.rs  fq3.rs  fq6.rs  fr.rs
curves/ed97/: Cargo.toml
curves/ed97/benches/: ed97.rs
curves/ed97/src/: lib.rs
curves/ed97/src/curves/: g1.rs  g2.rs  mod.rs  tests.rs
curves/ed97/src/fields/: fq.rs  fq3.rs  fq6.rs  fr.rs  mod.rs
curves/ed_on_bn124/: Cargo.toml
curves/ed_on_bn124/src/: lib.rs
curves/ed_on_bn124/src/constraints/: mod.rs
curves/ed_on_bn124/src/curves/: mod.rs
curves/ed_on_bn124/src/fields/: fq.rs  fr.rs
curves/ed_on_bn183/: Cargo.toml
curves/ed_on_bn183/src/: lib.rs
curves/ed_on_bn183/src/constraints/: mod.rs
curves/ed_on_bn183/src/curves/: mod.rs
curves/ed_on_bn183/src/fields/: fq.rs  fr.rs  tests.rs
curves/ed_on_ed181/: Cargo.toml
curves/ed_on_ed181/src/: lib.rs
curves/ed_on_ed181/src/constraints/: mod.rs
curves/ed_on_ed181/src/curves/: mod.rs
curves/ed_on_ed181/src/fields/: fq.rs  fr.rs
curves/ed_on_ed58/: Cargo.toml
curves/ed_on_ed58/src/: lib.rs
curves/ed_on_ed58/src/constraints/: fields.rs  mod.rs
curves/ed_on_ed58/src/curves/: mod.rs
curves/ed_on_ed58/src/fields/: fq.rs  fr.rs
curves/ed_on_ed61/: Cargo.toml
curves/ed_on_ed61/src/: lib.rs
curves/ed_on_ed61/src/constraints/: mod.rs
curves/ed_on_ed61/src/curves/: mod.rs
curves/ed_on_ed61/src/fields/: fq.rs  fr.rs
curves/ed_on_ed97/: Cargo.toml
curves/ed_on_ed97/src/: lib.rs
curves/ed_on_ed97/src/constraints/: mod.rs
curves/ed_on_ed97/src/curves/: mod.rs
curves/ed_on_ed97/src/fields/: fq.rs  fr.rs
ec/: Cargo.toml  README.md
ec/src/: lib.rs
ec/src/models/ed6/: g1.rs  g2.rs  mod.rs
