[workspace]
members = [
    "ec",
]
resolver = "2"

[workspace.package]
version = "0.5.0"
authors = [ "arkworks contributors" ]
homepage = "https://arkworks.rs"
repository = "https://github.com/arkworks-rs/algebra"
categories = ["cryptography"]
include = [
    "Cargo.toml",
    "src",
    "README.md",
    "LICENSE-APACHE",
    "LICENSE-MIT",
    "doc/katex-header.html",
]
license = "MIT OR Apache-2.0"
edition = "2021"
rust-version = "1.75"

[workspace.metadata.docs.rs]
rustdoc-args = ["--html-in-header katex-header.html"]

[workspace.metadata.release]
dependent-version = "fix"

[workspace.dependencies]
ark-ec = { version = "0.5.0", default-features = false }

ark-ff = { version = "0.5.0", default-features = false }
ark-serialize = { version = "0.5.0", default-features = false }
ark-std = { version = "0.5.0", default-features = false }


num-traits = { version = "0.2", default-features = false }

educe = "0.6.0"
itertools = { version = "0.13", default-features = false }
rayon = "1"
zeroize = { version = "1", default-features = false }

[profile.release]
opt-level = 3
lto = "thin"
incremental = true
panic = 'abort'

[profile.bench]
opt-level = 3
debug = false
rpath = false
lto = "thin"
incremental = true
debug-assertions = false

[profile.dev]
opt-level = 0
panic = 'abort'

[profile.test]
opt-level = 3
lto = "thin"
incremental = true
debug-assertions = true
debug = true
