[package]
name = "ark-ec-ed"
description = "A library for elliptic curves in edwards form and their pairings"
documentation = "https://docs.rs/ark-ec/"
version.workspace = true
authors.workspace = true
homepage.workspace = true
repository.workspace = true
categories.workspace = true
include.workspace = true
license.workspace = true
edition.workspace = true
rust-version.workspace = true
metadata.docs.rs.workspace = true
metadata.release.workspace = true
keywords = ["cryptography", "elliptic-curves", "pairing"]

[dependencies]
ark-ec.workspace = true
ark-std.workspace = true
ark-serialize.workspace = true
ark-ff.workspace = true
educe.workspace = true
num-traits.workspace = true
rayon = { workspace = true, optional = true }
itertools.workspace = true

[target.'cfg(all(target_has_atomic = "8", target_has_atomic = "16", target_has_atomic = "32", target_has_atomic = "64", target_has_atomic = "ptr"))'.dependencies]
ahash = { version = "0.8", default-features = false}

[target.'cfg(not(all(target_has_atomic = "8", target_has_atomic = "16", target_has_atomic = "32", target_has_atomic = "64", target_has_atomic = "ptr")))'.dependencies]
fnv = { version = "1.0", default-features = false }

[features]
default = []
std = [ "ark-std/std", "ark-ff/std", "ark-serialize/std" ]
parallel = [ "std", "rayon", "ark-std/parallel", "ark-serialize/parallel" ]
