[package]
name = "ark-ed-on-bn183"
version.workspace = true
authors.workspace = true
description = "A Twisted Edwards curve defined over the scalar field of the ED183 curve"
homepage.workspace = true
repository.workspace = true
documentation = ""
keywords.workspace = true
categories.workspace = true
include.workspace = true
license.workspace = true
edition.workspace = true

[dependencies]
ark-ff = { workspace = true }
ark-ec = { workspace = true }
ark-std = { workspace = true }
ark-r1cs-std = { workspace = true, optional = true }
ark-bn183 = { workspace = true, features = [ "scalar_field" ] }

[dev-dependencies]
ark-relations = { workspace = true }
ark-serialize = { workspace = true }
ark-algebra-test-templates = { workspace = true }
ark-curve-constraint-tests = { workspace = true }

[features]
default = []
std = [ "ark-std/std", "ark-ff/std", "ark-ec/std", "ark-bn183/std" ]
r1cs = ["ark-r1cs-std"]
asm = [ "ark-ff/asm", "ark-bn183/asm" ]